<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/baseline_person_add_24" />

    <TextView
        android:id="@+id/bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_bemvindo" />

    <EditText
        android:id="@+id/editTextUsuariocad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_usuariocad" />

    <EditText
        android:id="@+id/editTextSenacad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_senhacad"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_cadastrar" />

    <TextView
        android:id="@+id/possuicadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_tenhocad" />

</LinearLayout>